// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiTablePagination is rendered 1`] = `
<div
  class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow"
>
  <div
    class="euiFlexItem euiFlexItem--flexGrowZero"
  >
    <div
      class="euiPopover euiPopover--anchorUpRight"
    >
      <div
        class="euiPopover__anchor"
      >
        <button
          class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--xSmall"
          data-test-subj="tablePaginationPopoverButton"
          type="button"
        >
          <span
            class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
          >
            <span
              class="euiButtonContent__icon"
              color="inherit"
              data-euiicon-type="arrowDown"
            />
            <span
              class="euiButtonEmpty__text"
            >
              Rows per page: 50
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    class="euiFlexItem euiFlexItem--flexGrowZero"
  >
    <nav
      aria-label="aria-label"
      class="euiPagination testClass1 testClass2"
      data-test-subj="test subject string"
    >
      <button
        aria-label="Previous page, 1"
        class="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall"
        data-test-subj="pagination-button-previous"
        type="button"
      >
        <span
          aria-hidden="true"
          class="euiButtonIcon__icon"
          color="inherit"
          data-euiicon-type="arrowLeft"
        />
      </button>
      <ul
        aria-label="aria-label"
        class="euiPagination__list"
      >
        <li
          class="euiPagination__item"
        >
          <button
            aria-label="Page 1 of 5"
            class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--small euiPaginationButton euiPaginationButton--hideOnMobile"
            data-test-subj="pagination-button-0"
            type="button"
          >
            <span
              class="euiButtonContent euiButtonEmpty__content"
            >
              <span
                class="euiButtonEmpty__text"
              >
                1
              </span>
            </span>
          </button>
        </li>
        <li
          class="euiPagination__item"
        >
          <button
            aria-current="true"
            aria-label="Page 2 of 5"
            class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--small euiButtonEmpty-isDisabled euiPaginationButton euiPaginationButton-isActive euiPaginationButton--hideOnMobile"
            data-test-subj="pagination-button-1"
            disabled=""
            type="button"
          >
            <span
              class="euiButtonContent euiButtonEmpty__content"
            >
              <span
                class="euiButtonEmpty__text"
              >
                2
              </span>
            </span>
          </button>
        </li>
        <li
          class="euiPagination__item"
        >
          <button
            aria-label="Page 3 of 5"
            class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--small euiPaginationButton euiPaginationButton--hideOnMobile"
            data-test-subj="pagination-button-2"
            type="button"
          >
            <span
              class="euiButtonContent euiButtonEmpty__content"
            >
              <span
                class="euiButtonEmpty__text"
              >
                3
              </span>
            </span>
          </button>
        </li>
        <li
          class="euiPagination__item"
        >
          <button
            aria-label="Page 4 of 5"
            class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--small euiPaginationButton euiPaginationButton--hideOnMobile"
            data-test-subj="pagination-button-3"
            type="button"
          >
            <span
              class="euiButtonContent euiButtonEmpty__content"
            >
              <span
                class="euiButtonEmpty__text"
              >
                4
              </span>
            </span>
          </button>
        </li>
        <li
          class="euiPagination__item"
        >
          <button
            aria-label="Page 5 of 5"
            class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--small euiPaginationButton euiPaginationButton--hideOnMobile"
            data-test-subj="pagination-button-4"
            type="button"
          >
            <span
              class="euiButtonContent euiButtonEmpty__content"
            >
              <span
                class="euiButtonEmpty__text"
              >
                5
              </span>
            </span>
          </button>
        </li>
      </ul>
      <button
        aria-label="Next page, 3"
        class="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall"
        data-test-subj="pagination-button-next"
        type="button"
      >
        <span
          aria-hidden="true"
          class="euiButtonIcon__icon"
          color="inherit"
          data-euiicon-type="arrowRight"
        />
      </button>
    </nav>
  </div>
</div>
`;

exports[`EuiTablePagination is rendered when hiding the per page options 1`] = `
<div
  class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow"
>
  <div
    class="euiFlexItem euiFlexItem--flexGrowZero"
  />
  <div
    class="euiFlexItem euiFlexItem--flexGrowZero"
  >
    <nav
      aria-label="aria-label"
      class="euiPagination testClass1 testClass2"
      data-test-subj="test subject string"
    >
      <button
        aria-label="Previous page, 1"
        class="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall"
        data-test-subj="pagination-button-previous"
        type="button"
      >
        <span
          aria-hidden="true"
          class="euiButtonIcon__icon"
          color="inherit"
          data-euiicon-type="arrowLeft"
        />
      </button>
      <ul
        aria-label="aria-label"
        class="euiPagination__list"
      >
        <li
          class="euiPagination__item"
        >
          <button
            aria-label="Page 1 of 5"
            class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--small euiPaginationButton euiPaginationButton--hideOnMobile"
            data-test-subj="pagination-button-0"
            type="button"
          >
            <span
              class="euiButtonContent euiButtonEmpty__content"
            >
              <span
                class="euiButtonEmpty__text"
              >
                1
              </span>
            </span>
          </button>
        </li>
        <li
          class="euiPagination__item"
        >
          <button
            aria-current="true"
            aria-label="Page 2 of 5"
            class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--small euiButtonEmpty-isDisabled euiPaginationButton euiPaginationButton-isActive euiPaginationButton--hideOnMobile"
            data-test-subj="pagination-button-1"
            disabled=""
            type="button"
          >
            <span
              class="euiButtonContent euiButtonEmpty__content"
            >
              <span
                class="euiButtonEmpty__text"
              >
                2
              </span>
            </span>
          </button>
        </li>
        <li
          class="euiPagination__item"
        >
          <button
            aria-label="Page 3 of 5"
            class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--small euiPaginationButton euiPaginationButton--hideOnMobile"
            data-test-subj="pagination-button-2"
            type="button"
          >
            <span
              class="euiButtonContent euiButtonEmpty__content"
            >
              <span
                class="euiButtonEmpty__text"
              >
                3
              </span>
            </span>
          </button>
        </li>
        <li
          class="euiPagination__item"
        >
          <button
            aria-label="Page 4 of 5"
            class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--small euiPaginationButton euiPaginationButton--hideOnMobile"
            data-test-subj="pagination-button-3"
            type="button"
          >
            <span
              class="euiButtonContent euiButtonEmpty__content"
            >
              <span
                class="euiButtonEmpty__text"
              >
                4
              </span>
            </span>
          </button>
        </li>
        <li
          class="euiPagination__item"
        >
          <button
            aria-label="Page 5 of 5"
            class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--small euiPaginationButton euiPaginationButton--hideOnMobile"
            data-test-subj="pagination-button-4"
            type="button"
          >
            <span
              class="euiButtonContent euiButtonEmpty__content"
            >
              <span
                class="euiButtonEmpty__text"
              >
                5
              </span>
            </span>
          </button>
        </li>
      </ul>
      <button
        aria-label="Next page, 3"
        class="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall"
        data-test-subj="pagination-button-next"
        type="button"
      >
        <span
          aria-hidden="true"
          class="euiButtonIcon__icon"
          color="inherit"
          data-euiicon-type="arrowRight"
        />
      </button>
    </nav>
  </div>
</div>
`;
